fixed logo on mobile view extra small view

--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,13 @@ header img{
 }
 @media only screen and (max-width: 400px) {
     header img{
+        width: 40vh;
+    }
+}
+@media only screen and (min-width: 400px) and (max-width: 600px) {
+    header img{
         width: 60vh;
     }
 }
+
+
